// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessment adapter can convert to JSON 1`] = `
Object {
  "content": Object {
    "partialScoring": false,
    "responseType": "pick-one",
    "shuffle": true,
  },
}
`;

exports[`MCAssessment adapter can convert to JSON WITH attributes 1`] = `
Object {
  "content": Object {
    "partialScoring": false,
    "responseType": "pick-one",
    "shuffle": true,
  },
}
`;

exports[`MCAssessment adapter construct builds with attributes 1`] = `
Object {
  "modelState": Object {
    "partialScoring": false,
    "responseType": "pick-one",
    "shuffle": false,
  },
}
`;

exports[`MCAssessment adapter construct builds with responseType 1`] = `
Object {
  "modelState": Object {
    "partialScoring": false,
    "responseType": "pick-one",
    "shuffle": true,
  },
}
`;

exports[`MCAssessment adapter construct builds with shuffle 1`] = `
Object {
  "modelState": Object {
    "partialScoring": false,
    "responseType": "pick-one",
    "shuffle": true,
  },
}
`;

exports[`MCAssessment adapter construct builds without attributes 1`] = `
Object {
  "modelState": Object {
    "partialScoring": false,
    "responseType": "pick-one",
    "shuffle": true,
  },
}
`;
